[tool.poetry]
name = "likulau"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <renrror@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
liku = {git = "https://github.com/rorre/liku.git", rev = "main", extras = ["htm"]}
starlette = "^0.37.2"
uvicorn = "^0.30.1"
asyncer = "^0.0.7"
typer = "^0.12.3"

[tool.poetry.scripts]
likulau = 'likulau.console:run'

[tool.poetry.group.dev.dependencies]
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
